# turbogap

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Details of input  LICENSE.md  Makefile  Makefile_cray  Makefile_cray~  Makefile_gnu  Makefile_gnu~  README.md  adaptive_time.f90  adaptive_time.i  compile.sh  compile.sh~  debug_compile.sh  debug_compile.sh~  electronic_stopping.f90  electronic_stopping.i  energies.txt  eph_beta.i  eph_electronic_stopping.f90  eph_electronic_stopping.i  eph_fdm.f90  eph_fdm.i  exp_interface.i  exp_utils.i  fortran_cuda_interfaces.i  gap.i  gap_interface.f90  gap_interface.i  input  input_descriptions  local_properties.i  mc.i  md.f90  md.i  mpi.i  neighbors.i  (+18 more)
CH_runs/: input  mbd_traj.xyz  output.txt  trajectory_out.xyz  ts_traj.xyz
CH_runs/gap_files/: CH.gap
bin_ftn/: turbogap
makefiles/: Makefile.CSC-LUMI_cray  Makefile.CSC-LUMI_gnu  Makefile.CSC-Mahti_gfortran_openblas_mpi  Makefile.CSC-Mahti_gfortran_openblas_mpi_hip_source  Makefile.CSC-Mahti_gfortran_openblas_mpi_hip_source_opt  Makefile.CSC-Mahti_gfortran_openblas_mpi_hip_source_opt~  Makefile.CSC-Mahti_gfortran_openblas_mpi_tau_sing  Makefile.CSC-Puhti_gfortran_mkl_mpi  Makefile.CSC-Puhti_gfortran_openblas_mpi_hip_source_opt  Makefile.CSC-Puhti_gfortran_openblas_mpi_hip_source_opt~  Makefile.CSC-Roihu_gfortran_openblas_mpi  Makefile.Mac_M1_gfortran_openblas_mpi  Makefile.Ubuntu_gfortran  Makefile.Ubuntu_gfortran_mpi
randomized_C_27000/: cleanup.sh  extract_md_data.sh  input
randomized_C_27000/gap_files_CO/: CO.xml.sparseX.GAP_2022_5_19_180_7_17_31_4141  CO.xml.sparseX.GAP_2022_5_19_180_7_17_31_4142  (+2 more)
runs/: .input.swp  2829.xyz  2829_10_m1.xyz  2829_10_m2.xyz  2829_10_m3.xyz  2829_10_p1.xyz  2829_10_p2.xyz  2829_10_p3.xyz  2829_125m.xyz  2829_125p.xyz  2829_1_m1.xyz  2829_1_m2.xyz  2829_1_m3.xyz  2829_1_p2.xyz  2829_1_p3.xyz  2829_2_m1.xyz  2829_2_m2.xyz  2829_2_m3.xyz  2829_2_p1.xyz  2829_2_p2.xyz  2829_2_p3.xyz  2829_2ym.xyz  2829_2yp.xyz  2829_3_m1.xyz  2829_3_m2.xyz  2829_3_m3.xyz  2829_3_p1.xyz  2829_3_p2.xyz  2829_3_p3.xyz  2829_4_m2.xyz  2829_4_m3.xyz  2829_4_p2.xyz  2829_4_p3.xyz  2829_4m.xyz  2829_4p.xyz  2829_5_m1.xyz  2829_5_m2.xyz  2829_5_m3.xyz  2829_5_p1.xyz  2829_5_p2.xyz  (+1295 more)
src/: 3b_final.cc  Details of input  adaptive_time.f90  constants.f90  constants_nswc.f90  cuda_wrappers.cu  cuda_wrappers.cu.prehip  electronic_stopping.f90  electrostatics.f90  eph_beta.f90  eph_electronic_stopping.f90  eph_fdm.f90  exp_interface.f90  exp_utils.f90  fortran_cuda_interfaces.f90  gap.f90  gap_copy_2022_05_06.f90  gap_interface.f90  gpu_exp.cu  gpu_sparse.cu  kernel_linearization.f90  local_properties.f90  mc.f90  md.f90  messed_up_if_vdw.f90  misc.f90  mpi.f90  mpi_utils.f90  neighbors.f90  nonneg_leastsq.f90  nonneglsq.f90  orthonormalization_kernels.cc  read_files.f90  sparsekit.f90  splines.f90  stopping.f90  test_eb.cc  turbogap.f90  turbogap_predict.f90  turbogap_routine.f90  (+12 more)
tools/: README.md
(+211 files in other folders)
